# upp

./: .dockerignore  .env.example  .gitignore  ADOPTION_ASSETS.md  CONFIG_MANAGEMENT.md  Cargo.toml  DELIVERABLES.txt  Dockerfile  Dockerfile.dev  INTEGRATION_EXAMPLE.md  INTEGRATION_GUIDE.md  Makefile  OBSERVABILITY.md  OBSERVABILITY_ENHANCEMENTS.md  README.md  README_ADOPTION.md  README_OBSERVABILITY.md  START_HERE.md  docker-compose-adoption.yml  docker-compose.dev.yml  docker-compose.yml  latency_report.json
.github/workflows/: ci.yml
cli/: COMMAND_REFERENCE.md  Cargo.toml  DELIVERY_SUMMARY.txt  EXAMPLES.md  FILE_MANIFEST.txt  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md
cli/src/: config.rs  main.rs  output.rs
cli/tests/: cli_test.rs
config/: gateway.dev.toml  gateway.prod.toml  gateway.staging.toml  gateway.toml  prometheus-rules.yml  prometheus.yml  secrets.example.toml
config/grafana/dashboards/: upp-gateway.json
config/grafana/provisioning/: dashboards.yml  datasources.yml
conformance/: package.json
conformance/fixtures/kalshi/: market_sample.json
conformance/fixtures/opinion/: market_sample.json
conformance/fixtures/polymarket/: market_sample.json
conformance/tests/: helpers.ts
conformance/tests/schema/: market.test.ts
docs/: DEPLOYMENT.md  README.md  book.toml  index.html  openapi.json  openapi.yaml  swagger.html
docs-build/: 404.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-544c3cec.js  toc-12789008.js  toc.html
docs-build/api/: grpc.html  index.html  rest.html  websocket.html
docs-build/architecture/: gateway.html  index.html  overview.html  providers.html
docs-build/cli/: index.html
docs-build/development/: contributing.html  index.html  testing.html
docs-build/getting-started/: index.html  installation.html  quickstart.html
docs-build/operations/: configuration.html  deployment.html  index.html  monitoring.html
docs-build/sdk/: index.html  rust.html
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: README.md  grpc.md  rest.md  websocket.md
docs/src/architecture/: README.md  gateway.md  overview.md  providers.md
docs/src/cli/: README.md
docs/src/development/: README.md  contributing.md  testing.md
docs/src/getting-started/: README.md  installation.md  quickstart.md
docs/src/operations/: README.md  configuration.md  deployment.md  monitoring.md
docs/src/sdk/: README.md  rust.md
examples/: INDEX.md  MANIFEST.txt  OVERVIEW.md  README.md  arbitrage_scanner.py  market_monitor.py  mcp_agent_demo.py  portfolio_rebalancer.py
gateway/: .dockerignore  Cargo.toml  Dockerfile  FEATURE_6_INDEX.md  FEATURE_6_README.txt  FEATURE_6_SUMMARY.md  HARDENING_DELIVERY.md  HARDENING_INTEGRATION.md  MIDDLEWARE_CHANGES.md
gateway/benches/: gateway_bench.rs
gateway/src/: lib.rs  main.rs
gateway/src/adapters/: kalshi.rs  mod.rs  opinion.rs  polymarket.rs
gateway/src/core/: aggregation.rs  arbitrage.rs  backtest.rs  cache.rs  config.rs  hardening.rs  historical.rs  mcp.rs  mod.rs  observability.rs  portfolio.rs  price_index.rs  registry.rs  shutdown.rs  smart_router.rs  storage.rs  types.rs
gateway/src/handlers/: arbitrage.rs  auth_mgmt.rs  backtest.rs  dashboard.rs  discovery.rs  docs.rs  health.rs  ingestion.rs  live_feed.rs  markets.rs  mcp.rs  mod.rs  portfolio.rs  price_history.rs  resolution.rs  settlement.rs  smart_routing.rs  status.rs  trading.rs  websocket.rs
gateway/src/middleware/: ENHANCEMENTS.md  IMPLEMENTATION_REFERENCE.md  INTEGRATION_EXAMPLES.md  README.md  auth.rs  cors.rs  rate_limit.rs  request_id.rs
gateway/src/transport/: grpc.rs  live_feed.rs  mod.rs  websocket.rs
gateway/static/: dashboard.html  openapi.json  status.html  swagger.html
gateway/tests/: e2e_test.rs  integration_test.rs  openapi_test.rs  redis_rate_limit_test.rs  ws_test.rs
proto/: buf.gen.yaml  buf.yaml
proto/upp/v1/: common.proto  discovery.proto  market.proto  portfolio.proto  resolution.proto  settlement.proto  trading.proto
schemas/json/: A2aConfig.json  AuthConfig.json  AuthMethod.json  Balance.json  CancelAllOrdersRequest.json  CancelAllOrdersResponse.json  CancelOrderRequest.json  CancelOrderResponse.json  CapabilityConfig.json  CapabilityDeclaration.json  Category.json  ClaimPayoutRequest.json  CreateOrderRequest.json  CreateOrderResponse.json  CredentialProviderInfo.json  DepositRequest.json  Dispute.json  DisputeInfo.json  Error.json  EstimateOrderRequest.json  EstimateOrderResponse.json  Event.json  ExtensionDeclaration.json  FileDisputeRequest.json  FixConfig.json  FundingInstrument.json  GetManifestRequest.json  GetMarketRequest.json  GetOrderBookRequest.json  GetOrderRequest.json  GetPnLHistoryRequest.json  GetPnLHistoryResponse.json  GetPortfolioSummaryRequest.json  GetPositionRequest.json  GetRelatedMarketsRequest.json  GetRelatedMarketsResponse.json  GetResolutionRequest.json  GetResolutionSourcesRequest.json  GetResolutionSourcesResponse.json  GetTransactionRequest.json  (+74 more)
schemas/openapi/: upp.swagger.json
scripts/: docker-smoke-test.sh
sdk/: .gitignore  Cargo.toml  INDEX.md  MANIFEST.md  QUICK_REFERENCE.md  README.md  SDK_STRUCTURE.md  VALIDATION.md
sdk/examples/: basic_usage.rs
sdk/src/: client.rs  error.rs  lib.rs  types.rs  ws.rs
sdk/tests/: integration_test.rs
sdks/: FEATURE_SUMMARY.md  FILES_MANIFEST.md  INTEGRATION_GUIDE.md  README.md
sdks/python/: README.md  pyproject.toml  setup.py
sdks/python/upp/: __init__.py  client.py  mcp.py  types.py  websocket.py
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  mcp.ts  types.ts  websocket.ts
tools/: mock_server.py  test_gateway.py  upp_cli.py
tools/chaos/: MANIFEST.md  QUICKSTART.md  README.md  chaos_test.py  latency_bench.py  run-all.sh  ws_stress.py
tools/loadtest/: README.md  k6-rest.js  k6-spike.js  k6-websocket.js  run-all.sh
tools/loadtest/results/: rest_load_20260313_214812.txt  rest_load_20260313_223207.txt  rest_smoke_20260313_214812.txt  rest_smoke_20260313_223207.txt  rest_stress_20260313_214812.txt  rest_stress_20260313_223207.txt  (+3 more)
