[workspace]
members = [
    "gateway",
    "sdk",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/universal-prediction-protocol/upp"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.bench]
debug = true
