[package]
name = "upp-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "upp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
dirs = "5.0"
urlencoding = "2.1"
