[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upp-sdk"
version = "0.1.0"
description = "Universal Prediction Protocol SDK for Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "UPP Labs", email = "info@upp.dev" },
]
keywords = [
    "prediction-markets",
    "universal-protocol",
    "kalshi",
    "polymarket",
    "opinion-trade",
    "trading-api",
    "python",
    "sdk",
    "websocket",
    "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/upp-labs/sdk-python"
Repository = "https://github.com/upp-labs/sdk-python.git"
Documentation = "https://upp-sdk.readthedocs.io"
Issues = "https://github.com/upp-labs/sdk-python/issues"

[tool.setuptools]
packages = ["upp"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
extend-exclude = "^/tests"

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
]
ignore = [
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=upp --cov-report=term-missing"
