[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upp-sdk"
version = "0.1.0"
description = "Universal Prediction Protocol (UPP) Python SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "UPP Team", email = "team@upp.dev" }
]
keywords = ["upp", "prediction-markets", "arbitrage", "trading", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.990",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://upp.dev"
Repository = "https://github.com/universal-prediction-protocol/upp"
Documentation = "https://docs.upp.dev"

[tool.setuptools]
packages = ["upp"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
